[package]
name = "ticket"
version = "0.1.0"
authors = ["Knair WANG <knairwang@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
flexi_logger = "0.16"
log = "0.4"
jsonwebtoken = "7"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
url = "2.1"
error-chain = "0.12"
