[package]
name = "ticket"
version = "0.1.0"
authors = ["Knair WANG <knairwang@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
flexi_logger = "*"
log = "*"
chrono = "*"

actix-web = "4.0.0-beta.1"
tokio = { version = "*", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

jsonwebtoken = "7"

reqwest = { version = "*", features = ["json"] }
base64 = "*"
bytes = "*"
url = "2.1"

redis = "*"
